Lots of lots changes 1. Retracted "vw" in some elements to solve visibility issue on zoom change 2. Added media query to correctly match appearance on different platforms 3. Unconventionally added grid to second section 4. Added New fonts locally and usable throughout page
-----
i think thats it for today, see ya tomorrow

bye rahega sabhi ko :D

--- a/style.css
+++ b/style.css
@@ -1,74 +1,252 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
-    background-color: gray;
+
+@font-face {
+    font-family: "NetflixSans";
+    src: url(NetflixSans-Regular.otf);
 }
 
-.intro{
-    background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    height: 80vh;
-    position: relative;
-    z-index: 1;
-    object-fit: contain;
+body {
+    background-color: rgb(51, 51, 51);
 }
 
-.backdrop{
-    position:absolute;
+.backdrop {
+    position: absolute;
     top: 0px;
     left: 0px;
     right: 0px;
     bottom: 0px;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.7;
     z-index: -1;
 }
 
-.intro div img{
-    width: 100px;
+.intro {
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    height: 89vh;
+    position: relative;
+    z-index: 1;
+    object-fit: contain;
 }
 
-.navbar{
+.leftbtn button {
+    margin-top: 40px;
+}
+
+.logo {
+    width: 200px;
+    margin-right: 30vw;
+
+}
+
+.navbar {
     display: flex;
     justify-content: space-around;
     position: relative;
     z-index: 1;
 }
 
-.hero{
-    position:relative;
+
+.leftbtn button:nth-child(2) {
+    background-color: red;
+    color: white;
+    font-family: "NetflixSans";
+    border-width: 0px;
+    border-radius: 4px;
+    padding: 8px;
+    padding-left: 14px;
+    padding-right: 14px;
+    font-weight: 700;
+    margin-left: 20px;
+
+}
+
+.leftbtn button:first-child {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-family: "NetflixSans";
+    border-width: thin;
+    border-style: solid;
+    border-color: white;
+    border-radius: 4px;
+    padding: 7px;
+    padding-left: 22px;
+    padding-right: 22px;
+    font-weight: 700;
+    margin-left: 20px;
+}
+
+.leftbtn button:first-child img {
+    background-color: white;
+    margin-right: 10px;
+}
+
+
+
+.hero {
+    position: relative;
     z-index: 1;
     color: white;
     text-align: center;
+    margin-top: 40px;
 }
 
-.firstlad{
+.hero p {
+    font-family: "NetflixSans";
+    text-align: center;
+    margin: 15px;
+}
+
+.hero p:nth-child(1) {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero p:nth-child(2) {
+    font-size: 24px;
+}
+
+.hero p:nth-child(3) {
+    font-size: 24px;
+}
+
+.hero div:first-child{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero div button {
+    padding: 8px;
+    border-radius: 4px;
+    background-color: red;
+    color: white;
+    font-family: "NetflixSans";
+    font-size: 24px;
+    margin-left: 10px;
+    font-weight: 600;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+}
+
+.hero div input {
+    width: 25vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 44px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    padding-left: 10px;
+}
+
+.firstlad {
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "NetflixSans";
+    margin-top: 8px;
+    height: 600px;
+}
+
+.firstlad div:first-child {
+    height: 40vh;
+    text-align: center;
+    align-content: center;
+}
+
+.tv {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+.tv img {
+    position: relative;
+    grid-area: 1/1;
+    width: 40vw;
+}
+
+.tv video {
+    grid-area: 1/1;
+    width: 30vw;
+}
+
+
+
+.secondlad {
     color: white;
     background-color: black;
     margin-top: 9px;
 }
 
-.secondlad{
-    color: white;
-    background-color: black;
-    margin-top: 9px;
-}
-.thirdlad{
+.thirdlad {
     color: white;
     background-color: black;
     margin-top: 9px;
 }
 
-.lastlad{
+.lastlad {
     color: white;
     background-color: black;
     margin-top: 9px;
 }
-.faq{
+
+.faq {
     color: white;
     background-color: black;
     margin-top: 9px;
+}
+
+
+
+/* MEDIA QUERY FOR RESPONSIVENESS */
+@media screen and (max-width:1100px) {
+    .firstlad {
+        display: block;
+        height: 550px;
+        
+    }
+    .firstlad div:first-child{
+        scale: 0.8;
+        height: 200px;
+    }
+
+    .hero{
+        margin-top: 10px;
+
+    }
+
+    .hero div:first-child{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }  
+
+    .hero p:nth-child(1) {
+        font-size: 34px;
+        font-weight: bolder;
+    }
+    
+    .hero p:nth-child(2) {
+        font-size: 18px;
+    }
+    
+    .hero p:nth-child(3) {
+        font-size: 18px;
+    }
+
+    .hero div button{
+        margin-top: 15px;
+        font-size: 15px;
+    }
+    .hero div input{
+        width: 30vw;
+    }
 }
